@@ -48,10 +48,10 @@ unless ($is_dist)
 my $build = Mason::Build->new
   ( module_name => 'HTML::Mason',
     requires    => \%prereq,
-    recommends  => { 'HTML::Entities' => 0 },
-    build_requires => { 'Module::Build' => 0.26,
-                        'Test'          => 0,
-                        'Test::Builder' => 0,
+    build_requires => { 'HTML::Entities' => 0,
+                        'Module::Build'  => 0.26,
+                        'Test'           => 0,
+                        'Test::Builder'  => 0,
                       },
     license     => 'perl',
     create_makefile_pl => 'passthrough',
