@@ -59,12 +59,10 @@ EOF
 
 #------------------------------------------------------------
 
-    if ( load_pkg('HTML::Entities') )
-    {
-        $group->add_test( name => 'default_escape_flags',
-                          description => 'test that no escaping is done by default',
-                          interp_params => { use_object_files => 0 },
-                          component => <<'EOF',
+    $group->add_test( name => 'default_escape_flags',
+                      description => 'test that no escaping is done by default',
+                      interp_params => { use_object_files => 0 },
+                      component => <<'EOF',
 Explicitly HTML-escaped: <% $expr |h %><p>
 Explicitly HTML-escaped redundantly: <% $expr |hh %><p>
 Explicitly URL-escaped: <% $expr |u
@@ -76,7 +74,7 @@ Explicitly not escaped: <% $expr | n%><p>
 my $expr = "<b><i>Hello there</i></b>.";
 </%init>
 EOF
-                          expect => <<'EOF',
+                      expect => <<'EOF',
 Explicitly HTML-escaped: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly HTML-escaped redundantly: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly URL-escaped: %3Cb%3E%3Ci%3EHello%20there%3C%2Fi%3E%3C%2Fb%3E.<p>
@@ -84,17 +82,14 @@ No flags: <b><i>Hello there</i></b>.<p>
 No flags again: <b><i>Hello there</i></b>.<p>
 Explicitly not escaped: <b><i>Hello there</i></b>.<p>
 EOF
-                        );
-    }
+                    );
 
 #------------------------------------------------------------
 
-    if ( load_pkg('HTML::Entities') )
-    {
-        $group->add_test( name => 'default_escape_flags_new',
-                          description => 'test new escape flags',
-                          interp_params => { use_object_files => 0 },
-                          component => <<'EOF',
+    $group->add_test( name => 'default_escape_flags_new',
+                      description => 'test new escape flags',
+                      interp_params => { use_object_files => 0 },
+                      component => <<'EOF',
 Explicitly HTML-escaped: <% $expr | h %><p>
 Explicitly HTML-escaped redundantly: <% $expr | h,h %><p>
 Explicitly URL-escaped: <% $expr |u
@@ -106,7 +101,7 @@ Explicitly not escaped: <% $expr | n %><p>
 my $expr = "<b><i>Hello there</i></b>.";
 </%init>
 EOF
-                          expect => <<'EOF',
+                      expect => <<'EOF',
 Explicitly HTML-escaped: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly HTML-escaped redundantly: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly URL-escaped: %3Cb%3E%3Ci%3EHello%20there%3C%2Fi%3E%3C%2Fb%3E.<p>
@@ -114,17 +109,14 @@ No flags: <b><i>Hello there</i></b>.<p>
 No flags again: <b><i>Hello there</i></b>.<p>
 Explicitly not escaped: <b><i>Hello there</i></b>.<p>
 EOF
-                        );
-    }
+                    );
 
 #------------------------------------------------------------
 
-    if ( load_pkg('HTML::Entities') )
-    {
-        $group->add_test( name => 'default_escape_flags_2',
-                          description => 'test that turning on default escaping works',
-                          interp_params => { use_object_files => 0, default_escape_flags => 'h' },
-                          component => <<'EOF',
+    $group->add_test( name => 'default_escape_flags_2',
+                      description => 'test that turning on default escaping works',
+                      interp_params => { use_object_files => 0, default_escape_flags => 'h' },
+                      component => <<'EOF',
 Explicitly HTML-escaped: <% $expr |h %><p>
 Explicitly HTML-escaped redundantly: <% $expr |hh %><p>
 Explicitly URL-escaped: <% $expr |un
@@ -136,7 +128,7 @@ Explicitly not escaped: <% $expr | n%><p>
 my $expr = "<b><i>Hello there</i></b>.";
 </%init>
 EOF
-                          expect => <<'EOF',
+                      expect => <<'EOF',
 Explicitly HTML-escaped: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly HTML-escaped redundantly: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly URL-escaped: %3Cb%3E%3Ci%3EHello%20there%3C%2Fi%3E%3C%2Fb%3E.<p>
@@ -144,18 +136,15 @@ No flags: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 No flags again: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly not escaped: <b><i>Hello there</i></b>.<p>
 EOF
-                        );
-    }
+                    );
 
 #------------------------------------------------------------
 
-    if ( load_pkg('HTML::Entities') )
-    {
-        $group->add_test( name => 'default_escape_flags_2_new',
-                          description => 'test that turning on default escaping works with new flags',
-                          interp_params => { use_object_files => 0,
-                                             default_escape_flags => [ 'h' ] },
-                          component => <<'EOF',
+    $group->add_test( name => 'default_escape_flags_2_new',
+                      description => 'test that turning on default escaping works with new flags',
+                      interp_params => { use_object_files => 0,
+                                         default_escape_flags => [ 'h' ] },
+                      component => <<'EOF',
 Explicitly HTML-escaped: <% $expr | h %><p>
 Explicitly HTML-escaped redundantly: <% $expr | h , h %><p>
 Explicitly URL-escaped: <% $expr | u, n
@@ -167,7 +156,7 @@ Explicitly not escaped: <% $expr | n %><p>
 my $expr = "<b><i>Hello there</i></b>.";
 </%init>
 EOF
-                          expect => <<'EOF',
+                      expect => <<'EOF',
 Explicitly HTML-escaped: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly HTML-escaped redundantly: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly URL-escaped: %3Cb%3E%3Ci%3EHello%20there%3C%2Fi%3E%3C%2Fb%3E.<p>
@@ -175,8 +164,7 @@ No flags: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 No flags again: &lt;b&gt;&lt;i&gt;Hello there&lt;/i&gt;&lt;/b&gt;.<p>
 Explicitly not escaped: <b><i>Hello there</i></b>.<p>
 EOF
-                        );
-    }
+                    );
 
 #------------------------------------------------------------
 
